# openpi

./: .gitignore  pyproject.toml
docs/: 00_INDEX.md
docs/archive/legacy/: PI0_ADAPT_TO_PI_EXPLANATION.md  PI0_CAMERA_CONFIG.md  PI0_ENVIRONMENT_GUIDE.md  PI0_FPS_ANALYSIS.md  PI0_INFERENCE_COMPLETE_GUIDE.md  PI0_MIGRATION_PLAN.md  PI0_NETWORK_ANALYSIS.md  PI0_NEW_CHAT_CONTEXT.md  PI0_QUICK_START.md  PI0_SETUP_STATUS.md  PI0_SYNTAX_NOTES.md  PI0_TRAINING_CONFIG_TEMPLATE.md  PI0_TRAINING_PREFLIGHT_CHECKLIST.md
docs/concepts/: 11_uv_vs_conda.md  12_adapt_to_pi.md
docs/setup/: 01_installation.md  02_hardware_requirements.md  03_git_workflow.md
docs/training/: 23_monitoring.md
examples/trossen_ai/: README.md  main.py  pyproject.toml
scripts/: train.py
src/openpi/training/: config.py  data_loader.py
